--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <title>Pyscript by wk-18K</title>
 </head>
-<body>
+<body class="grey darken-3">
+    <nav>
+        <div class="nav-wrapper grey darken-4">
+          <a href="index.html" class="brand-logo center">Pyscript by wk-18K</a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+          </ul>
+        </div>
+      </nav>
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <py-repl id="repl-demo" auto-generate="true"></py-repl>
+
 </body>
+<style>
+    body{
+        font-family: 'Kanit', sans-serif;
+    }
+    .ͼ15 .cm-activeLine {
+    font-family: 'Kanit', sans-serif;
+}
+    .cm-line {
+    font-family: 'Kanit', sans-serif;
+    font-size: 1.5rem;
+}
+    .ͼ2 .cm-activeLineGutter {
+    font-family: 'Kanit', sans-serif;
+}
+
+button.mr-2.block {
+    position: absolute;
+    top: -25px;
+}
+path {
+    color: red;
+}
+
+</style>
 </html>
