--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@ button.mr-2.block {
 path {
     color: red;
 }
+.text-sm {
+    padding: 10px;
+    font-size: 1.5rem;
+    color: rgb(67, 246, 99);
+    font-family: 'Kanit', sans-serif;
+}
 
 </style>
 </html>
