--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,49 +8,88 @@
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Pyscript by wk-18K</title>
 </head>
+
 <body class="grey darken-3">
     <nav>
         <div class="nav-wrapper grey darken-4">
-          <a href="index.html" class="brand-logo center">Pyscript by wk-18K</a>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-          </ul>
+            <a href="index.html" class="brand-logo center">Pyscript by wk-18K</a>
         </div>
-      </nav>
+    </nav>
+    <div class="row">
+        <div class="col s2 card blue-text text-darken-2" >
+            <ul>
+                <li><a href="l1.html">บทที่ 1</a></li>
+            </ul>
+        </div>
+
+        <div class="col s10">
+            <div class="card blue-grey darken-3">
+                <div class="card-content white-text">
+                    <span class="card-title">หน้าแรก</span>
+                    <p>การเรียนการสอนเขียนโปรแกรม</p>
+                    <p>- คลิกบรรทัดใน พื้นที่ทำงาน</p>
+                    <p>- กดที่เครื่องหมาย <span style="color: rgb(0, 51, 255);">▶</span> เพื่อให้โปรแกรมทำงาน</p>
+                    <p>หรือ กด shift + enter พร้อมกัน เพื่อให้โปรแกรมทำงาน</p>
+                </div>
+                <span class="card-title white-text" style="margin: 30px;">พื้นที่ทำงาน</span>
+                <py-repl id="repl-demo" auto-generate="true">
+                    print("หน้าแรก")
+                </py-repl>
+            </div>
+        </div>
+    </div>
+
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <py-repl id="repl-demo" auto-generate="true"></py-repl>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </body>
 <style>
-    body{
+    * {
         font-family: 'Kanit', sans-serif;
     }
+
+    body {
+        font-family: 'Kanit', sans-serif;
+    }
+
     .ͼ15 .cm-activeLine {
-    font-family: 'Kanit', sans-serif;
-}
+        font-family: 'Kanit', sans-serif;
+    }
+
     .cm-line {
-    font-family: 'Kanit', sans-serif;
-    font-size: 1.5rem;
-}
+        font-family: 'Kanit', sans-serif;
+        font-size: 1.5rem;
+    }
+
     .ͼ2 .cm-activeLineGutter {
-    font-family: 'Kanit', sans-serif;
-}
+        font-family: 'Kanit', sans-serif;
+    }
 
-button.mr-2.block {
-    position: absolute;
-    top: -25px;
-}
-path {
-    color: red;
-}
-.text-sm {
-    padding: 10px;
-    font-size: 1.5rem;
-    color: rgb(67, 246, 99);
-    font-family: 'Kanit', sans-serif;
-}
+    button.mr-2.block {
+        position: absolute;
+        top: -25px;
+    }
 
+    path {
+        color: rgb(0, 51, 255);
+    }
+
+    .text-sm {
+        padding: 5px;
+        font-size: 1.5rem;
+        color: rgb(173, 252, 210);
+        font-family: 'Kanit', sans-serif;
+    }
+
+    li {
+        padding: 9.5px;
+    }
+    ul {
+        padding: 10px;
+    }
 </style>
+
 </html>
